--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -15,10 +16,18 @@
 
         h1 {
             text-align: center;
+            margin-bottom: 20px; /* Отступ снизу для текста */
+        }
+
+        img {
+            align-self: center;
+            max-width: 100%; /* Масштабирование изображения */
+            height: auto;
         }
     </style>
 </head>
 <body>
     <h1>Вы все бабуины</h1>
+    <img src="aboba.jpeg" alt="Описание изображения">
 </body>
 </html>
