--- a/index.html
+++ b/index.html
@@ -1,33 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Центрирование текста</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
+1. <a href="https://www.roblox.com/games/18846035783/unnamed">Игра про побег из лабиринта, где за вами бежит бабуин. Ваша задача сбежать из этого лабиринта</a>
 
-        h1 {
-            text-align: center;
-            margin-bottom: 20px; /* Отступ снизу для текста */
-        }
 
-        img {
-            align-self: center;
-            max-width: 100%; /* Масштабирование изображения */
-            height: auto;
-        }
-    </style>
-</head>
-<body>
-    <h1>Вы все бабуины</h1>
-    <img src="aboba.jpeg" alt="Описание изображения">
-</body>
-</html>
+
