--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 2. <a href="https://www.roblox.com/games/18810468450/unnamed">Хотели бы вы сбежать из школы? Это игра как раз про это.</a><br><br>
 
+3. <a href="https://www.roblox.com/games/18902093075/unnamed">Сражайтесь с другими игроками с помощью меча и базуки. Будьте аккуратнее! Если выстрелите базукой рядом с собой вам нанесётся урон.</a><br><br>
+
 
 
 
