--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
 
 3. <a href="https://www.roblox.com/games/18902093075/unnamed">Сражайтесь с другими игроками с помощью меча и базуки. Будьте аккуратнее! Если выстрелите базукой рядом с собой вам нанесётся урон.</a><br><br>
 
+4. <a href="https://www.roblox.com/games/18928889733/Hide-and-seek">Вы можете стать как и ведущим, который ищет игроков, и прячущимся который должен спрятаться до того как ведущий начнёт искать.</a><br><br>
+
+5. <a href="https://www.roblox.com/games/18933941709/unnamed">В этой игре вы можете стать кем-то. Убийца, шериф и более. У каждой роли есть своя цель. Есть разные карты.</a><br><br>
+
+6. <a href="https://www.roblox.com/games/18958138467/Survival">В этой игре есть разные карты и разные опасные бедствия. Ваша задача выжить.</a><br><br>
+
+7. <a href="https://www.roblox.com/games/18104834284/unnamed">Большое и сложное обби с разными видами блоков? Пожалуйста.</a><br><br>
+
+8. <a href="https://www.roblox.com/games/18290318127/unnamed">В этой игре вам нужно выживать от толп зомби. И в этой игре есть босс.</a><br><br>
+
+9. <a href="https://www.roblox.com/games/18589320413/Tower-of-impossible">Эта башня по сложности почти как tower of hell осилите эту башню?</a><br><br>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
