--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Игры pro100hisav'ы</title>
+    <style>
+        body {
+            background-color: #1c1c1c; /* Темный фон */
+            color: #ffffff; /* Белый текст */
+            font-family: 'Comic Sans MS', cursive, sans-serif; /* Пример интересного шрифта */
+            padding: 20px;
+            line-height: 1.6;
+        }
+        h1 {
+            font-size: 3em;
+            color: #ffcc00; /* Яркий акцент на заголовок */
+            text-align: center;
+        }
+        a {
+            font-size: 1.5em;
+            color: #ff9900; /* Яркий цвет ссылок */
+            text-decoration: none;
+        }
+        a:hover {
+            color: #ffa500; /* Цвет при наведении */
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     
@@ -19,22 +42,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
